cmake_minimum_required(VERSION 3.22)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.0)
add_executable(basic_tutorial_1 basic-tutorial-1.c)
add_executable(basic_tutorial_2 basic-tutorial-2.c)
target_link_libraries(basic_tutorial_1  ${GSTREAMER_LIBRARIES})
target_link_libraries(basic_tutorial_2  ${GSTREAMER_LIBRARIES})
target_include_directories(basic_tutorial_1 PRIVATE ${GSTREAMER_INCLUDE_DIRS} ${GLIB_INCLUDE_DIRS})
target_include_directories(basic_tutorial_2 PRIVATE ${GSTREAMER_INCLUDE_DIRS} ${GLIB_INCLUDE_DIRS})
