project(GstExapleTutorial)
cmake_minimum_required(VERSION 3.22)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.0)
pkg_check_modules(GTK REQUIRED gtk+-3.0)
add_executable(basic_tutorial_1 basic-tutorial-1.c)
add_executable(basic_tutorial_2 basic-tutorial-2.c)
add_executable(basic_tutorial_3 basic-tutorial-3.c)
add_executable(basic_tutorial_4 basic-tutorial-4.c)
add_executable(basic_tutorial_5 basic-tutorial-5.c)
add_executable(basic_tutorial_6 basic-tutorial-6.c)
add_executable(basic_tutorial_7 basic-tutorial-7.c)
target_link_libraries(basic_tutorial_1  ${GSTREAMER_LIBRARIES})
target_link_libraries(basic_tutorial_2  ${GSTREAMER_LIBRARIES})
target_link_libraries(basic_tutorial_3  ${GSTREAMER_LIBRARIES})
target_link_libraries(basic_tutorial_4 ${GSTREAMER_LIBRARIES})
target_link_libraries(basic_tutorial_5 ${GSTREAMER_LIBRARIES} ${GTK_LIBRARIES})
target_link_libraries(basic_tutorial_6 ${GSTREAMER_LIBRARIES})
target_link_libraries(basic_tutorial_7 ${GSTREAMER_LIBRARIES})
target_include_directories(basic_tutorial_1 PRIVATE ${GSTREAMER_INCLUDE_DIRS})
target_include_directories(basic_tutorial_2 PRIVATE ${GSTREAMER_INCLUDE_DIRS})
target_include_directories(basic_tutorial_3 PRIVATE ${GSTREAMER_INCLUDE_DIRS})
target_include_directories(basic_tutorial_4 PRIVATE ${GSTREAMER_INCLUDE_DIRS})
target_include_directories(basic_tutorial_5 PRIVATE ${GSTREAMER_INCLUDE_DIRS} ${GTK_INCLUDE_DIRS})
target_include_directories(basic_tutorial_6 PRIVATE ${GSTREAMER_INCLUDE_DIRS})
target_include_directories(basic_tutorial_7 PRIVATE ${GSTREAMER_INCLUDE_DIRS})
